# procurement-intelligence

./: .env.example  .gitignore  .user.yml  DASHBOARD_QUICKSTART.md  config.py  dbt_project.yml  load-env.ps1  package-lock.yml  profiles.yml  pyproject.toml  requirements.txt  run_dashboard.py  testing_ingestion_parsing.py
.claude/: settings.json
chatbot/: agent.py  llm.py  tools.py
dashboard/: README.md  app.py  db.py  ui.py
dashboard/page_modules/: __init__.py  buyer_intelligence.py  copilot.py  executive_overview.py  opportunity_radar.py  pin_monitor.py  supplier_awards.py  trends_forecasts.py
dashboard/pages/: buyer_intelligence.py  copilot.py  opportunity_radar.py
docs/: Capstone Project  Group Microsoft 3.docx  eforms_notice_field_dictionary.xlsx  silver_table_documentation.md.docx
ingestion/: bronze_ingest_locally.py  bronze_ingest_spark.py  ted_downloader.py  upload_to_volume.py
logs/: query_log.sql
ml_models/: buyer_affinity.py  cpv_microsoft_mapping.py  feature_engineering.py  opportunity_scorer.py  win_probability.py
models/: anomaly_detection.py  buyer_segmentation.py  feature_engineering.py  opportunity_scorer.py  sources.yaml  win_probability.py
models/bronze/: bronze_award_criteria.sql  bronze_lots.sql  bronze_notices.sql  bronze_organizations.sql
models/gold/: gold_it_lots.sql  (+2 more)
notebooks/: ml_models.ipynb  reading_tables.ipynb
orchestration/: bronze_runner.py  create_job.py  dbt_runner.py  ingest_runner.py  ml_runner.py
scripts/: bronze_ingest_spark.py  bronze_to_silver_spark.py  create_mock_sources.sql
seeds/: cpv_codes.csv
(+5 files in other folders)
